--- a/HW7/index.html
+++ b/HW7/index.html
@@ -1,42 +1,43 @@
 <html>
 
 <head>
+    <script src="https://juxinglong.github.io/static/iframe-resizer/iframeResizer.contentWindow.min.js"></script>
+
     <title>MIS 3033 HW7 Daxton Gray</title>
-    
+
     <style>
-        #main
-        {
-            width:1000px;
-            margin-left:auto;
-            margin-right:auto;
+        #main {
+            width: 1000px;
+            margin-left: auto;
+            margin-right: auto;
         }
-        #header
-        {
-            background-color:antiquewhite;
-            width:1000px;
-            height:50px;
-            display:flex;
-            flex-direction:row;
-            justify-content:end;
-            align-items:center;
+
+        #header {
+            background-color: antiquewhite;
+            width: 1000px;
+            height: 50px;
+            display: flex;
+            flex-direction: row;
+            justify-content: end;
+            align-items: center;
         }
-        #content
-        {
-            background-color:aliceblue;
-            width:1000px;
-            height:300px;
-            display:flex;
-            flex-direction:row;
+
+        #content {
+            background-color: aliceblue;
+            width: 1000px;
+            height: 300px;
+            display: flex;
+            flex-direction: row;
         }
-        #footer
-        {
-            background-color:#073c76;
-            color:white;
-            width:1000px;
-            height:50px;
-            display:flex;
-            justify-content:center;
-            align-items:center;
+
+        #footer {
+            background-color: #073c76;
+            color: white;
+            width: 1000px;
+            height: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
     </style>
 </head>
