--- a/exam2/index.html
+++ b/exam2/index.html
@@ -1,17 +1,86 @@
 <html>
 <head>
-    <title>MIS 3033 Exam 2 Spring 2024 [Exam Code here] Your name</title>
+    <title>MIS 3033 Exam 2 Spring 2024 [JYNF] Daxton Gray</title>
     <link rel="icon" href="static/img/head1.png"/>
     <link rel="stylesheet" href="static/site.css"/>
 
     <style>
-
+        #main
+        {
+            width:1000px;
+            margin-right:auto;
+            margin-left:auto;
+        }
+        #header
+        {
+            font-size:30pt;
+            color:dodgerblue;
+            text-transform:uppercase;
+            font-weight:bold;
+            width:1000px;
+            height:100px;
+            display:flex;
+            align-items:center;
+            justify-content:right;
+        }
+        #content
+        {
+            width:1000px;
+            display:flex;
+            flex-direction:row;
+            justify-content:center;
+        }
+        #left
+        {
+            color:dodgerblue;
+            font-size:20pt;
+            font-weight:bold;
+            border-width:2px;
+            border-style:solid;
+            border-color:darkgray;
+            border-radius:10px;
+            padding:5px;
+            width:480px;
+            display:flex;
+            flex-direction:column;
+            align-items:center;
+        }
+        #top
+        {
+            width:480px;
+            border-width:2px;
+            border-style:solid;
+            border-color:darkgray;
+            border-radius:10px;
+            padding:5px;
+            margin-bottom:5px;
+        }
+        #bottom 
+        {
+            width:480px;
+            border-width:2px;
+            border-style:solid;
+            border-color:darkgray;
+            border-radius:10px;
+            padding:5px;
+        }
+        #footer
+        {
+            background-color:aliceblue;
+            color:darkgrey;
+            border-radius:5px;
+            width:1000px;
+            height:50px;
+            display:flex;
+            align-items:center;
+            justify-content:center;
+        }
     </style>
 </head>
 
 <body>
-    [Exam Code]
-    <img src="static/img/a.svg" style="height:50px;"/>
+    [JYNF]
+    <!--<img src="static/img/a.svg" style="height:50px;"/>
     <img src="static/img/b.svg" style="height:50px;"/>
     <img src="static/img/css.svg" style="height:50px;"/>
     <img src="static/img/head1.png" style="height:50px;"/>
@@ -20,7 +89,55 @@
     <img src="static/img/javascript.svg" style="height:50px;"/>
     <img src="static/img/linkedin.png" style="height:50px;"/>
     <img src="static/img/logo.svg" style="height:50px;"/>
-    <img src="static/img/sqlite.svg" style="height:50px;"/>
+    <img src="static/img/sqlite.svg" style="height:50px;"/>-->
+
+    <div id="main">
+
+        <div id="header">
+            I Love Programming!
+            <img src="static/img/a.svg" style="height:100px;" />
+        </div>
+
+        <div id="content">
+
+            <div id="left">
+                <span>I love MIS3033</span>
+                <img src="static/img/b.svg" style="width:400px;" />
+            </div>
+
+            <div id="right">
+
+                <div id="top">
+                    <span style="font-size:20px;font-weight:bold;background-color:lightskyblue;border-radius:5px;">What I already learned:</span>
+                    <br />
+                    <ul>
+                        <li>C#</li>
+                        <li>C# Entity Framework</li>
+                        <li>Database Sqlite</li>
+                        <li>HTML & CSS</li>
+                    </ul>
+                </div>
+
+                <div id="bottom">
+                    <span style="font-size:20px;font-weight:bold;border-radius:5px;">What I am going to learn next:</span>
+                    <br />
+                    <ol>
+                        <li>JavaScript</li>
+                        <li>BootStrap</li>
+                        <li>ASP.NET MVC</li>
+                        <li>Web REST API</li>
+                    </ol>
+                </div>
+
+            </div>
+
+        </div>
+
+        <div id="footer">
+            Designed and Devoloped by Daxton Gray for MIS 3033 Exam 2
+        </div>
+
+    </div>
 
 </body>
 </html>
